@@ -1283,6 +1283,21 @@ nucomp_marshal_load(VALUE self, VALUE a)
     return self;
 }
 
+#ifdef MARSHAL_LOAD_DIRECT
+/* :nodoc: */
+static VALUE
+nucomp_marshal_load_fake(VALUE self, VALUE a)
+{
+    rb_raise(rb_eNotImpError, "not implemented");
+}
+
+VALUE
+rb_Complex_marshal_load(VALUE obj, VALUE a)
+{
+    return nucomp_marshal_load(obj, a);
+}
+#endif
+
 #ifdef MARSHAL_OLD_STYLE
 /* :nodoc: */
 static VALUE
@@ -1970,12 +1985,17 @@ Init_Complex(void)
     rb_define_method(rb_cComplex, "to_s", nucomp_to_s, 0);
     rb_define_method(rb_cComplex, "inspect", nucomp_inspect, 0);
 
+#ifndef MARSHAL_LOAD_DIRECT
 #ifndef MARSHAL_OLD_STYLE
     rb_define_method(rb_cComplex, "marshal_dump", nucomp_marshal_dump, 0);
     rb_define_method(rb_cComplex, "marshal_load", nucomp_marshal_load, 1);
 #else
     rb_define_method(rb_cComplex, "_dump", nucomp_marshal__dump, 1);
     rb_define_singleton_method(rb_cComplex, "_load", nucomp_marshal__load, 1);
+#endif
+#else
+    rb_define_method(rb_cComplex, "marshal_dump", nucomp_marshal_dump, 0);
+    rb_define_method(rb_cComplex, "marshal_load", nucomp_marshal_load_fake, 1);
 #endif
 
     /* --- */
